[package]
name = "rust_image_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
num_cpus = "1.15.0"
rand = "0.8.5"
serde = {version = "1.0.155", features=["derive"]}
serde_json = "1.0.94"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }